# student_portfolio

./: README.md
nginx-service/nginx/: nginx.conf
student_portfolio/: .gitignore  pyproject.toml  shell.nix
student_portfolio-postgres-db/: docker-compose.yml
student_portfolio/award/: models.py
student_portfolio/award/migrations/: 0001_initial.py
student_portfolio/event/: models.py
student_portfolio/event/migrations/: 0001_initial.py
student_portfolio/private_storage_test_app/: urls.py  views.py
student_portfolio/private_storage_test_app/migrations/: 0001_initial.py
student_portfolio/project/: models.py
student_portfolio/project/migrations/: 0001_initial.py
student_portfolio/student_portfolio/: settings.py
student_portfolio/templates/award/: base.html
student_portfolio/user_profile/migrations/: 0001_initial.py
vue-project/src/components/award/: Award.vue
vue-project/src/components/event/: Event.vue
vue-project/src/components/event/event-summary/: EventSummary.vue
vue-project/src/components/project/: Project.vue
