[tool.poetry]
name = "student-portfolio"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false
[tool.poetry.dependencies]
# python = "^3.11"
# django = "^5.1.4"
# djangorestframework = "^3.15.2"
# drf-access-policy = "^1.5.0"
# django-private-storage = "^3.1.1"
# django-cors-headers = "^4.6.0"
# psycopg2-binary = "^2.9.10"

python = "^3.11"
django = "3.2.5"
djangorestframework = "3.14.0"
drf-access-policy = "1.3.0"
django-private-storage = "3.0"
django-cors-headers = "3.13.0"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
